# linefit_ground_segmentation

linefit_ground_segmentation/: CMakeLists.txt  package.xml
linefit_ground_segmentation/launch/: segmentation.launch  segmentation_params.yaml  test.launch
